# rsp-kwin

./: .gitignore  fix.js  make.sh
asset/: compositor.desktop
src/: CMakeLists.txt  README.md  rsp-kwin.desktop  rsp2kwinexporter.in  startrspkwin.1  startrspkwin.in  toggledropdown.in
